Improve organization on hero

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
             </div>
-            <img src="images/landscape-scotland-house-mountain.jpg" alt="House Surrounded by Trees Under Cloudy Sky, Scotland UK" width="500px">
+            <img src="images/landscape-scotland-house-mountain.jpg" alt="House Surrounded by Trees Under Cloudy Sky, Scotland UK" width="500px" class="hero-image">
         </div>
     </header>
 
