--- a/index.html
+++ b/index.html
@@ -37,19 +37,27 @@
             <h2>Some random information.</h2>
             <div class="container-infos">
                 <div class="info">
-                    <img src="images/pedestrians-street-stirling.jpg" alt="Pedestrians Crossing a Cobblestone Street Across A Three Storey Brown Stone Building Scotland" width="200px">
+                    <div class="info-img">
+                        <img src="images/pedestrians-street-stirling.jpg" alt="Pedestrians Crossing a Cobblestone Street Across A Three Storey Brown Stone Building Scotland" width="200px">
+                    </div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info">
-                    <img src="images/cathedral-edinburgh.jpg" alt="Beige and Gray Cathedral Edinburgh" width="200px">
+                    <div class="info-img">
+                        <img src="images/cathedral-edinburgh.jpg" alt="Beige and Gray Cathedral Edinburgh" width="200px">
+                    </div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info">
-                    <img src="images/redbooth-edinburgh.jpg" alt="Red Telephone Booth Edinburgh" width="200px">
+                    <div class="info-img">
+                        <img src="images/redbooth-edinburgh.jpg" alt="Red Telephone Booth Edinburgh" width="300px">
+                    </div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info">
-                    <img src="images/moutain-stream-scotland.jpg" alt="Mountain And Stream Scotland" width="200px">
+                    <div class="info-img">
+                        <img src="images/moutain-stream-scotland.jpg" alt="Mountain And Stream Scotland" width="200px">
+                    </div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
