--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
 
         <div class="cta-part">
             <div class="blue-background">
-                <h2>Call to action! It's time!</h2>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <div>
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
                 <button>Sign up</button>
             </div>
         </div>
